--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,7 +1,7 @@
 <h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a></p>
-<p><a href="https://youtu.be/BbeeuzU5Qc8?si=qZqYZwSyyhJ4Yg6s">我的IG</a>&lt;&lt;&lt;</p>
+<p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a>&lt;&lt;&lt;</p>
+<p></p>
 <h1>Yeah body (Click in ◀︎◀︎◀︎)</h1>
 <h2>w4</h2>
 <p>1.建立線上考試帳號並將Github建立2023倉儲,弄Github Page搞出靜態網站</p>
@@ -11,7 +11,6 @@
 <h2>W5</h2>
 <p>1.選擇用soliwork畫出零組件</p>
 <p>2.認識CoppeliaSim然後學</p>
-<p>3.<em>(老師我給你一個讚)</em></p>
 <h2>W6</h2>
 <p>1.評分網站及倉儲(Reference--&gt;cadenote 電腦輔助設計與實習課堂筆記)</p>
 <p><a href="https://mde.tw/cadnote/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/9215c7c160119721ded887018cda8f4e/raw/afc0e4d2267199743ac44bc7aeb0c4b195a30abb/generate_cad2023_2a_site_repo.py">Cad2023_2a_學員網站跟倉儲</a></p>
@@ -27,7 +26,7 @@
 <p>1.localhost透過token,SSH確定git push權限,SS設定可以透過Putty完成</p>
 <p>2.Replit透過connect功能連結與Github的權限</p>
 <p>3.自架主機s1511.cycu.org&gt;&gt;透過SSH以及分配埠號</p>
-<p>4.<em>(老師我還是愛你)</em></p>
+<p>4.<em>(老師我愛你)</em></p>
 <h2>w9</h2>
 <p>1.Github在2023年底之後要登入時需要2FA認證</p>
 <p>2.Replit在2024年初不讓免費仔使用了,只能only fan</p>
@@ -44,7 +43,7 @@
 <h1>Exam</h1>
 <p>1.連到機械設計系ipv6網域之後,可以進去到考試網站裡面{<a href="https://exam.cycu.org/">點我進入</a>}</p>
 <p>2.創辦帳號時,username是學號,然後..................自己應該會創吧(Group:二甲&gt;&gt;cad2023a)</p>
-<p>3.<em>(老師我還是愛著你)</em></p>
+<p>3.<em>(老師我愛你)</em></p>
 <h1>project1</h1>
 <h1>任務一</h1>
 <h2>磁力吸引</h2>
