--- a/config/content.htm
+++ b/config/content.htm
@@ -1,9 +1,8 @@
 <h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a>&lt;&lt;&lt;</p>
+<p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a>&lt;&lt;&lt;&lt;</p>
 <p><a href="https://q36180005.github.io/cad2023">https://q36180005.github.io/cad2023</a></p>
-<p></p>
-<h1>Yeah body (Click in ◀︎◀︎◀︎)</h1>
+<p></p><h1>Yeah body (Click in ◀︎◀︎◀︎)</h1>
 <h2>w4</h2>
 <p>1.建立線上考試帳號並將Github建立2023倉儲,弄Github Page搞出靜態網站</p>
 <p>2.利用Replit連結Github的網站,將改版後的資料內容generate到Github</p>
