--- a/content/index.html
+++ b/content/index.html
@@ -143,10 +143,9 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Next</a> >> Yeah body (Click in ◀︎◀︎◀︎)<br /><h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a>&lt;&lt;&lt;</p>
+<p><a href="https://github.com/q36180005/cad2023/settings/pages">倉儲</a>&lt;&lt;&lt;&lt;</p>
 <p><a href="https://q36180005.github.io/cad2023">https://q36180005.github.io/cad2023</a></p>
-<p></p>
-<br /> <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Next</a> >> Yeah body (Click in ◀︎◀︎◀︎)</div>
+<p></p><br /> <a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Next</a> >> Yeah body (Click in ◀︎◀︎◀︎)</div>
         
     <!-- footer -->
       <div class="container">
