--- a/content/Brython.html
+++ b/content/Brython.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w14.html'>w14</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='localhost.html'>localhost</a></li></ul><li><a href='Exam.html'>Exam</a><li><a href='project1.html'>project1</a><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w14.html'>w14</a><li><a href='W15.html'>W15</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='localhost.html'>localhost</a></li></ul><li><a href='Exam.html'>Exam</a><li><a href='project1.html'>project1</a><li class='has-children'><a href='任務一(專案一).html'>任務一(專案一)</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='專案二.html'>專案二</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">磁力吸引 << <a href='磁力吸引.html'>Previous</a> <br /><h1>Brython</h1>
+    <div id="tipue_search_content">專案二 << <a href='專案二.html'>Previous</a> <br /><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -429,7 +429,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <!-- editor2 結束 --><hr/>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><br />磁力吸引 << <a href='磁力吸引.html'>Previous</a> </div>
+</p><br />專案二 << <a href='專案二.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
