--- a/content/W15.html
+++ b/content/W15.html
@@ -142,13 +142,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='W7.html'>Next</a> >> W7<br /><h1>W6</h1>
-<p>1.評分網站及倉儲(Reference--&gt;cadenote 電腦輔助設計與實習課堂筆記)</p>
-<p><a href="https://mde.tw/cadnote/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/9215c7c160119721ded887018cda8f4e/raw/afc0e4d2267199743ac44bc7aeb0c4b195a30abb/generate_cad2023_2a_site_repo.py">Cad2023_2a_學員網站跟倉儲</a></p>
-<p>2.小組評分網站及倉儲--&lt;<span>(Reference--&gt;cadenote 電腦輔助設計與實習課堂筆記)</span></p>
-<p><a href="https://41123120.github.io/cad2023_ag1/content/index.html">第一組age1</a> {<a href="https://github.com/41123120/cad2023_ag1">repo</a>}</p>
-<p><a href="https://probe2004.github.io/cad2023_ag2/content/%E5%BE%85%E8%BE%A6%E4%BA%8B%E9%A0%85.html"></a></p>
-<br />W5 << <a href='W5.html'>Previous</a> <a href='W7.html'>Next</a> >> W7</div>
+    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit<br /><h1>W15</h1>
+<p>永動機模擬操作</p>
+<p><a href="./../downloads/永動機零件組合.mp4">wink影片</a>(修正一)</p>
+<p><a href="https://drive.google.com/drive/folders/1Kn7Mc7ru3VQ2qqkLjSvjucifw8PDFAzk?usp=sharing">零件檔案</a></p>
+<br />w14 << <a href='w14.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit</div>
         
     <!-- footer -->
       <div class="container">
