--- a/content/任務一(專案一).html
+++ b/content/任務一(專案一).html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,13 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='W7.html'>Next</a> >> W7<br /><h1>W6</h1>
-<p>1.評分網站及倉儲(Reference--&gt;cadenote 電腦輔助設計與實習課堂筆記)</p>
-<p><a href="https://mde.tw/cadnote/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/9215c7c160119721ded887018cda8f4e/raw/afc0e4d2267199743ac44bc7aeb0c4b195a30abb/generate_cad2023_2a_site_repo.py">Cad2023_2a_學員網站跟倉儲</a></p>
-<p>2.小組評分網站及倉儲--&lt;<span>(Reference--&gt;cadenote 電腦輔助設計與實習課堂筆記)</span></p>
-<p><a href="https://41123120.github.io/cad2023_ag1/content/index.html">第一組age1</a> {<a href="https://github.com/41123120/cad2023_ag1">repo</a>}</p>
-<p><a href="https://probe2004.github.io/cad2023_ag2/content/%E5%BE%85%E8%BE%A6%E4%BA%8B%E9%A0%85.html"></a></p>
-<br />W5 << <a href='W5.html'>Previous</a> <a href='W7.html'>Next</a> >> W7</div>
+    <div id="tipue_search_content">project1 << <a href='project1.html'>Previous</a> <a href='磁力吸引.html'>Next</a> >> 磁力吸引<br /><h1>任務一(專案一)</h1>
+<br />project1 << <a href='project1.html'>Previous</a> <a href='磁力吸引.html'>Next</a> >> 磁力吸引</div>
         
     <!-- footer -->
       <div class="container">
