--- a/content/磁力吸引.html
+++ b/content/磁力吸引.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w14.html'>w14</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='localhost.html'>localhost</a></li></ul><li><a href='Exam.html'>Exam</a><li><a href='project1.html'>project1</a><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Yeah body (Click in ◀︎◀︎◀︎).html'>Yeah body (Click in ◀︎◀︎◀︎)</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w14.html'>w14</a><li><a href='W15.html'>W15</a><li><a href='Replit.html'>Replit</a><li><a href='s1511.html'>s1511</a><li><a href='localhost.html'>localhost</a></li></ul><li><a href='Exam.html'>Exam</a><li><a href='project1.html'>project1</a><li class='has-children'><a href='任務一(專案一).html'>任務一(專案一)</a><ul class='dropdown'><li><a href='磁力吸引.html'>磁力吸引</a></li></ul><li><a href='專案二.html'>專案二</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,9 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">任務一 << <a href='任務一.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>磁力吸引</h1>
+    <div id="tipue_search_content">任務一(專案一) << <a href='任務一(專案一).html'>Previous</a> <a href='專案二.html'>Next</a> >> 專案二<br /><h1>磁力吸引</h1>
 <p><a href="https://drive.google.com/drive/folders/1BO7KDxjQDuT_zahN7FbU3u7BWFQ_5aKJ?usp=sharing">零件檔案</a></p>
-<br />任務一 << <a href='任務一.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<br />任務一(專案一) << <a href='任務一(專案一).html'>Previous</a> <a href='專案二.html'>Next</a> >> 專案二</div>
         
     <!-- footer -->
       <div class="container">
